fixed songs looks and moved covers to storage and fixed update logic

--- a/src/app/songs/songs.component.less
+++ b/src/app/songs/songs.component.less
@@ -3,4 +3,7 @@
     .lyrics {
         white-space: pre-wrap;
     }
+    .img-thumbnail {
+        min-width: 100%;
+    }
 }
